tests/baselines/reference/parserStrictMode5.errors.txt
parserStrictMode5.ts(2,1): error TS1100: Invalid use of 'eval' in strict mode.
parserStrictMode5.ts(2,1): error TS2630: Cannot assign to 'eval' because it is a function.


==== parserStrictMode5.ts (2 errors) ====
    "use strict";
    eval += 1;
    ~~~~
!!! error TS1100: Invalid use of 'eval' in strict mode.
    ~~~~
!!! error TS2630: Cannot assign to 'eval' because it is a function.